--- a/about/index.html
+++ b/about/index.html
@@ -205,12 +205,12 @@
 <li>Python</li>
 <li>.JS (Node)</li>
 <li>Java</li>
+<li>Docker</li>
 </ul>
 </li>
 <li>Hacking
 <ul>
 <li>Web Hacking</li>
-<li>Mobile Hacking (Android)</li>
 <li>Embedded Hacking
 <ul>
 <li>Hardware Chip Identity/Analysis/Extracting</li>
@@ -310,8 +310,12 @@
 <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2023-39076">CVE-2023-39076</a></li>
 </ul>
 </li>
+</ul>
+</li>
 <li>
-<p>&#x23;&#xfe0f;&#x20e3; Volkswagen - AVNT(ECU) 0-day Vulnerability Report.</p>
+<p>2024 (1)</p>
+<ul>
+<li>&#x23;&#xfe0f;&#x20e3; Volkswagen - AVNT(ECU) 0-day Vulnerability Report.
 <ul>
 <li>Not Published (Not yet Patched)</li>
 </ul>
