blog post update -

--- a/about/index.html
+++ b/about/index.html
@@ -249,10 +249,19 @@
 <h1 id="awards">Awards</h1>
 <ul>
 <li>
-<p>&#x1f947; The 3th Y-CTF Vulnerability Analysis (and) Penetration Testing Contest</p>
+<p>&#x1f947; The 3th Y-CTF Vulnerability Analysis (and) Penetration Testing Contest (2018)</p>
 </li>
 <li>
-<p>&#x1f396;&#xfe0f; The 2th KOSPO Web Service Penetration Testing Contest</p>
+<p>&#x1f947; Cyber Security Challenge - Car Hacking &amp; Defense Contest (2021 / AutoCrypt)</p>
+</li>
+<li>
+<p>&#x1f396;&#xfe0f; The 2th KOSPO Web Service Penetration Testing Contest (2021)</p>
+</li>
+<li>
+<p>&#x1f396;&#xfe0f; DEFCON30 Car Hacking Village CTF <code>5th</code> place (2022)</p>
+</li>
+<li>
+<p>&#x1f396;&#xfe0f; DEFCON31 Car Hacking Village CTF <code>4th</code> place (2023)</p>
 </li>
 </ul>
 <h1 id="publications">Publications</h1>
